fixed word wrap in apos-rich-text elements, in case of words longer than line length

--- a/public/css/apos-ui.less
+++ b/public/css/apos-ui.less
@@ -284,6 +284,11 @@
   }
 }
 
+.apos-rich-text
+{
+  word-wrap: break-word;
+}
+
 ////////////////////
 // Admin hover UI
 ///////////////////
